infra/openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quote-api
spec:
  selector:
    app: quote-api
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
