infra/openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: quote-api
spec:
  to:
    kind: Service
    name: quote-api
  port:
    targetPort: http
  tls:
    termination: edge
